<resources>
    <string name="app_name">Flippy</string>
    <string name="main_menu">Snoozee Games</string>
    <string name="music">Royalty Free Music from Bensound</string>
    <string name="button_send">Play</string>
    <string name="return_button">Main Menu</string>
    <string name="instructions">How to Play</string>
    <string name="back">Back</string>
    <string name="directions"> Objective \n \n Clear the board without flipping a tile that contains a zero. You will receive a score
    multiplier based on the value of the tile you choose to reveal. \n \n \n </string>
    <string name="settings"> Just kidding! There are no settings. Go play the game already. \n \n \n </string>
</resources>
